# PUPIL

./: README.md
dataset_curation/generation/MMCTAgent/: pyproject.toml
dataset_curation/generation/MMCTAgent/app/: ingestion_consumer.py
dataset_curation/generation/MMCTAgent/app/services/: ingestion_services.py
dataset_curation/generation/MMCTAgent/mcp_server/tools/schemas/: kb_tool_schemas.py
dataset_curation/generation/MMCTAgent/mmct/config/: settings.py
dataset_curation/generation/MMCTAgent/mmct/image_pipeline/agents/: image_agent.py
dataset_curation/generation/MMCTAgent/mmct/image_pipeline/core/models/recog/: instructblip.py
dataset_curation/generation/MMCTAgent/mmct/image_pipeline/core/tools/: vit.py
dataset_curation/generation/MMCTAgent/mmct/providers/: search_document_models.py  search_index_schema.py
dataset_curation/generation/MMCTAgent/mmct/providers/azure_providers/: embedding_provider.py  llm_provider.py  search_provider.py  storage_provider.py
dataset_curation/generation/MMCTAgent/mmct/providers/custom_providers/: local_faiss_search_provider.py
dataset_curation/generation/MMCTAgent/mmct/providers/custom_providers/graph_rag/: document_graph_handler.py  faiss_index_handler.py
dataset_curation/generation/MMCTAgent/mmct/providers/openai_providers/: llm_provider.py
dataset_curation/generation/MMCTAgent/mmct/video_pipeline/: prompts_and_description.py
dataset_curation/generation/MMCTAgent/mmct/video_pipeline/agents/: video_agent.py
dataset_curation/generation/MMCTAgent/mmct/video_pipeline/core/ingestion/: cleanup_manager.py  embedding_orchestrator.py  ingestion_pipeline.py  upload_orchestrator.py
dataset_curation/generation/MMCTAgent/mmct/video_pipeline/core/ingestion/chapter_generator/: chapter_generator.py  chapter_ingestion_pipeline.py  object_collection_processor.py
dataset_curation/generation/MMCTAgent/mmct/video_pipeline/core/ingestion/key_frames_extractor/: clip_embeddings.py  keyframe_processor.py
dataset_curation/generation/MMCTAgent/mmct/video_pipeline/core/ingestion/semantic_chunking/: process_transcript.py  semantic_chunker.py
dataset_curation/generation/MMCTAgent/mmct/video_pipeline/core/ingestion/transcription/: cloud_transcription.py  whisper_transcription.py
dataset_curation/generation/MMCTAgent/mmct/video_pipeline/core/ingestion/utils/: helper.py
dataset_curation/generation/MMCTAgent/mmct/video_pipeline/core/tools/: critic.py  get_context.py  get_object_collection.py  get_relevant_frames.py  get_video_summary.py  query_frame.py  video_qna.py
dataset_curation/generation/MMCTAgent/mmct/video_pipeline/core/tools/utils/: search_keyframes.py
dataset_curation/generation/MMCTAgent/mmct/video_pipeline/utils/: helper.py  video_frame_search.py
dataset_curation/generation/MMCTAgent/mmct_/config/: providers.py
dataset_curation/generation/MMCTAgent/mmct_/image_pipeline/: prompts.py
dataset_curation/generation/MMCTAgent/mmct_/image_pipeline/agents/: image_agent.py
dataset_curation/generation/MMCTAgent/mmct_/image_pipeline/core/models/vit/: visual_llm.py
dataset_curation/generation/MMCTAgent/mmct_/image_pipeline/core/tools/: critic.py  object_detect.py  ocr.py  recog.py  vit.py
dataset_curation/generation/MMCTAgent/mmct_/providers/: __init__.py  azure.py  local.py  openai.py  search_document_models.py  search_index_schema.py
dataset_curation/generation/MMCTAgent/mmct_/providers/azure_providers/: __init__.py  ai_search_chapter_provider.py  ai_search_keyframes_provider.py  ai_search_object_collection_provider.py  azure_reasoning_llm_provider.py  azure_schema_utils.py  embedding_provider.py  llm_provider.py  speech_service_provider.py  storage_provider.py  vision_provider.py  whisper_transcription_provider.py
dataset_curation/generation/MMCTAgent/mmct_/providers/base/: __init__.py  chapter_vector_db_provider.py  embedding_provider.py  image_embedding_provider.py  keyframes_vector_db_provider.py  llm_provider.py  object_collection_vector_db_provider.py  storage_provider.py  transcription_provider.py  vision_provider.py
dataset_curation/generation/MMCTAgent/mmct_/providers/custom_providers/: __init__.py  clip_image_embedding_provider.py  graph_rag_search_provider.py  local_faiss_search_provider.py  local_storage_provider.py
dataset_curation/generation/MMCTAgent/mmct_/providers/custom_providers/graph_rag/: document_graph_handler.py  faiss_index_handler.py
dataset_curation/generation/MMCTAgent/mmct_/providers/openai_providers/: embedding_provider.py  llm_provider.py  transcription_provider.py  vision_provider.py
dataset_curation/generation/MMCTAgent/mmct_/tests/providers/: test_image_embedding_provider.py
dataset_curation/generation/MMCTAgent/mmct_/video_pipeline/: __init__.py
dataset_curation/generation/MMCTAgent/mmct_/video_pipeline/agents/: video_agent.py
dataset_curation/generation/MMCTAgent/mmct_/video_pipeline/core/ingestion/: embedding_orchestrator.py  ingestion_pipeline.py  models.py  upload_orchestrator.py
dataset_curation/generation/MMCTAgent/mmct_/video_pipeline/core/ingestion/chapter_generator/: chapter_generator.py  chapter_ingestion_pipeline.py  video_summary.py  (+1 more)
dataset_curation/generation/MMCTAgent/mmct_/video_pipeline/core/tools/: critic.py  get_context.py  get_object_collection.py  get_relevant_frames.py  get_video_summary.py  query_frame.py  video_qna.py
dataset_curation/generation/MMCTAgent/mmct_/video_pipeline/utils/: embedding_utils.py  helper.py
(+332 files in other folders)
